[package]
name = "simple_scan"
version = "0.2.1"
authors = ["Nossie531"]
edition = "2021"
description = "Iterator extensions for simple scan operation."
repository = "https://github.com/nossie531/simple_scan"
license = "MIT OR Apache-2.0"
keywords = ["Iterator", "Extension", "scan"]
categories = ["no-std", "rust-patterns"]
